remove the code of GUI.