@@ -6,7 +6,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.asu</groupId>
     <artifactId>asu-tui</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <version>1.1.0-SNAPSHOT</version>
+    <modules>
+        <module>asu-tui-api</module>
+        <module>asu-tui-builtin</module>
+        <module>asu-tui-core</module>
+        <module>asu-tui-launcher</module>
+        <module>asu-tui-linux-tool-for-windows</module>
+    </modules>
     <properties>
         <!-- 编译参数 -->
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -15,25 +23,19 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.test.skip>true</maven.test.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
-        <main-class>me.asu.tui.Tool</main-class>
     </properties>
-    <parent>
-        <groupId>me.asu</groupId>
-        <artifactId>asu-build</artifactId>
-        <version>1.0.0</version>
-    </parent>
     <dependencies>
         <!--<dependency>-->
-            <!--<groupId>com.alee.laf</groupId>-->
-            <!--<artifactId>weblaf-complete</artifactId>-->
-            <!--<version>1.29</version>-->
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${basedir}/lib/weblaf-complete-1.29.jar</systemPath>-->
+        <!--<groupId>com.alee.laf</groupId>-->
+        <!--<artifactId>weblaf-complete</artifactId>-->
+        <!--<version>1.29</version>-->
+        <!--<scope>system</scope>-->
+        <!--<systemPath>${basedir}/lib/weblaf-complete-1.29.jar</systemPath>-->
         <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -45,111 +47,145 @@
     </dependencies>
     <build>
         <plugins>
+            <!-- lombok -->
             <plugin>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok-maven-plugin</artifactId>
-                <version>1.16.10.0</version>
-                <configuration>
-                    <encoding>utf-8</encoding>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>delombok</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
+            <!-- compiler -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
+            <!-- surefire -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                            <mainClass>${main-class}</mainClass>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>config/ ./</classpathPrefix>
-                        </manifest>
-                        <manifestEntries>
-                            <Specification-Title>${project.artifactId}</Specification-Title>
-                            <Specification-Version>${project.version}</Specification-Version>
-                        </manifestEntries>
-                    </archive>
-                    <excludes>
-                        <exclude>**/cli.properties</exclude>
-                    </excludes>
+                    <skip>${maven.test.skip}</skip>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.3.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <configuration>
-                    <skip>${maven.deploy.skip}</skip>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.3</version>
-                <configuration>
-                    <!-- 配置无效，配置全局环境变量
-                    JAVA_TOOL_OPTIONS =  -Dfile.encoding=UTF-8
-                    -->
-                    <charset>UTF-8</charset>
-                    <encoding>UTF-8</encoding>
-                    <show>private</show>
-                    <nohelp>true</nohelp>
-                    <aggregate>true</aggregate>
-                    <additionalparam>-Xdoclint:none</additionalparam>
-                    <tags>
-                        <tag>
-                            <name>date</name>
-                            <placement>a</placement>
-                            <head>创建日期</head>
-                        </tag>
-                        <tag>
-                            <name>copyright</name>
-                            <placement>a</placement>
-                            <head>版权:</head>
-                        </tag>
-                    </tags>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <!-- lombok -->
+                <plugin>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok-maven-plugin</artifactId>
+                    <version>1.16.10.0</version>
+                    <configuration>
+                        <encoding>utf-8</encoding>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <phase>generate-sources</phase>
+                            <goals>
+                                <goal>delombok</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <!-- compiler -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.5.1</version>
+                    <configuration>
+                        <fork>true</fork>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                        <compilerArgs>
+                            <!--<arg>-XX:MaxPermSize=512M</arg>-->
+                            <arg>-verbose</arg>
+                            <!--<arg>-Xlint:unchecked</arg>-->
+                            <!--<arg>-Xlint:deprecation</arg>-->
+                            <!--<arg>-bootclasspath</arg>-->
+                            <!--<arg>${env.JAVA_HOME}/jre/lib/rt.jar</arg>-->
+                            <!--<arg>-extdirs</arg>-->
+                            <!--<arg>${project.basedir}/src/main/webapp/WEB-INF/lib</arg>-->
+                        </compilerArgs>
+                    </configuration>
+                </plugin>
+                <!-- surefire -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.17</version>
+
+                </plugin>
+                <!-- jar -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.6</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <addDefaultImplementationEntries>false
+                                </addDefaultImplementationEntries>
+                                <addDefaultSpecificationEntries>false
+                                </addDefaultSpecificationEntries>
+                                <addClasspath>true</addClasspath>
+                                <!--							<classpathPrefix>lib/</classpathPrefix>-->
+                                <mainClass>me.asu.tui.Tool</mainClass>
+                            </manifest>
+                            <manifestEntries>
+                                <Specification-Title>${project.artifactId}</Specification-Title>
+                                <Specification-Version>${project.version}</Specification-Version>
+                                <Implementation-Title>${project.name}</Implementation-Title>
+                                <Implementation-Version>${project.version}</Implementation-Version>
+                                <Built-By>Asu</Built-By>
+                                <!-- <Class-Path>. lib/ext.jar</Class-Path>-->
+                            </manifestEntries>
+                        </archive>
+                        <!-- 由具体的项目自己指定 -->
+                        <!--<excludes>-->
+                        <!--<exclude>**/*.properties</exclude>-->
+                        <!--<exclude>**/*.xml</exclude>-->
+                        <!--<exclude>**/*.json</exclude>-->
+                        <!--<exclude>**/*.groovy</exclude>-->
+                        <!--<exclude>**/*.py</exclude>-->
+                        <!--<exclude>**/*.jar</exclude>-->
+                        <!--</excludes>-->
+                    </configuration>
+                </plugin>
+                <!-- dependency -->
+                <!--			<plugin>-->
+                <!--				<groupId>org.apache.maven.plugins</groupId>-->
+                <!--				<artifactId>maven-dependency-plugin</artifactId>-->
+                <!--				<version>2.10</version>-->
+                <!--				<executions>-->
+                <!--					<execution>-->
+                <!--						<id>copy-dependencies</id>-->
+                <!--						<phase>package</phase>-->
+                <!--						<goals>-->
+                <!--							<goal>copy-dependencies</goal>-->
+                <!--						</goals>-->
+                <!--						<configuration>-->
+                <!--							<outputDirectory>${project.build.directory}/lib</outputDirectory>-->
+                <!--						</configuration>-->
+                <!--					</execution>-->
+                <!--				</executions>-->
+                <!--			</plugin>-->
+
+                <!--			<plugin>-->
+                <!--				<groupId>com.jolira</groupId>-->
+                <!--				<artifactId>onejar-maven-plugin</artifactId>-->
+                <!--				<version>1.4.4</version>-->
+                <!--				<executions>-->
+                <!--					<execution>-->
+                <!--						<configuration>-->
+                <!--							<attachToBuild>true</attachToBuild>-->
+                <!--							<classifier>onejar</classifier>-->
+                <!--						</configuration>-->
+                <!--						<goals>-->
+                <!--							<goal>one-jar</goal>-->
+                <!--						</goals>-->
+                <!--					</execution>-->
+                <!--				</executions>-->
+                <!--			</plugin>-->
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
